# scibex

./: .Rprofile  .gitignore  .readthedocs.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DESCRIPTION  HISTORY.md  LICENSE  README.md  environment.yml  justfile  pyproject.toml  zensical.toml
.github/: ISSUE_TEMPLATE.md
.github/workflows/: docs.yml  test.yml
docs/: changelog.md  index.md  installation.md  tutorials.md  usage.md
docs/notebooks/: tutorial_5k_bcr.ipynb
overrides/: main.html
scripts/: convert_notebooks.py
src/scibex/: __init__.py  _aa_props.py  _ibex.py  _model_cache.py  _r.py  _types.py  cli.py  utils.py
src/scibex/tl/: __init__.py  _ibex.py
tests/: __init__.py  conftest.py  test_aa_props.py  test_ibex.py  test_python_backend.py  test_scibex.py
