[project]
name = "scibex"
version = "0.1.0"
description = "python wrap of the ibex R package"
readme = "README.md"
authors = [
  {name = "Qile Yang", email = "qile.yang@berkeley.edu"}
]
maintainers = [
  {name = "Qile Yang", email = "qile.yang@berkeley.edu"}
]
classifiers = [
    # TODO
]
license = {text = "MIT"}
dependencies = [
  "rpy2",
  "anndata",
  "scirpy",
  "muon",
]
requires-python = ">= 3.10"

[project.optional-dependencies]
test = [
    "coverage",  # testing
    "pytest",  # testing
    "ruff",  # linting
    "ty", # checking types
    "ipdb", # debugging
]

[project.urls]
bugs = "https://github.com/Qile0317/scibex/issues"
changelog = "https://github.com/Qile0317/scibex/blob/main/changelog.md"
homepage = "https://github.com/Qile0317/scibex"

[tool.ty]
# All rules are enabled as "error" by default; no need to specify unless overriding.
# Example override: relax a rule for the entire project (uncomment if needed).
# rules.TY015 = "warn"  # For invalid-argument-type, warn instead of error.

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # Pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
]

[tool.pytest.ini_options]
filterwarnings = [
    "ignore:Support for Awkward Arrays is currently experimental",
    "ignore:.*pull_on_update.*:FutureWarning",
    "ignore:`__version__` is deprecated:FutureWarning",
]

[tool.uv]
package = true
