[project]
name = "scibex"
version = "0.1.0b4"
description = "Python interface to the Ibex BCR embedding R package for scverse single-cell analysis"
readme = "README.md"
authors = [
  {name = "Qile Yang", email = "qile.yang@berkeley.edu"}
]
maintainers = [
  {name = "Qile Yang", email = "qile.yang@berkeley.edu"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Typing :: Typed",
]
license = {text = "MIT"}
dependencies = [
  "rpy2",
  "anndata",
  "scirpy",
  "muon",
]
requires-python = ">= 3.10"

[project.optional-dependencies]

python-backend = ["keras>=3.6", "tensorflow>=2.18"]

docs = [
    "zensical",
    "nbformat",
    "nbconvert",
    "jupyter",
    "beautifulsoup4",
    "cyclopts",
]
test = [
    "coverage",  # testing
    "pytest",  # testing
    "ruff",  # linting
    "ty", # checking types
    "ipdb", # debugging
    "keras>=3.6",
    "tensorflow>=2.18",
]

[project.urls]
bugs = "https://github.com/Qile0317/scibex/issues"
changelog = "https://github.com/Qile0317/scibex/blob/main/changelog.md"
homepage = "https://github.com/Qile0317/scibex"

[tool.ty]
# All rules are enabled as "error" by default; no need to specify unless overriding.
# Example override: relax a rule for the entire project (uncomment if needed).
# rules.TY015 = "warn"  # For invalid-argument-type, warn instead of error.

[tool.ty.src]
exclude = ["scripts/"]

[tool.ruff]
line-length = 120
exclude = ["scripts/"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # Pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
]

[tool.ruff.lint.per-file-ignores]
"*.ipynb" = ["E402"]  # notebooks commonly re-order imports for path setup

[tool.pytest.ini_options]
filterwarnings = [
    "ignore:Support for Awkward Arrays is currently experimental",
    "ignore:.*pull_on_update.*:FutureWarning",
    "ignore:`__version__` is deprecated:FutureWarning",
]

[tool.uv]
package = true
